--- a/package.json
+++ b/package.json
@@ -19,7 +19,13 @@
     "@angular/platform-browser": "~8.2.5",
     "@angular/platform-browser-dynamic": "~8.2.5",
     "@angular/router": "~8.2.5",
+    "angular-highcharts": "^10.0.1",
+    "bootstrap": "^4.5.3",
+    "chart.js": "^2.9.4",
+    "highcharts": "^8.2.2",
+    "jquery": "^3.5.1",
     "rxjs": "~6.4.0",
+    "save": "^2.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
